# esimulab

./: .editorconfig  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
docker/gaussiancity/: Dockerfile
docker/genesis-sim/: Dockerfile  entrypoint.sh
docker/web-viewer/: Dockerfile
scripts/: run_e2e_pipeline.py  test_earth2studio.py
src/esimulab/: __init__.py  __main__.py  cli.py  pipeline.py
src/esimulab/atmo/: __init__.py  downscale.py  fetch.py  forecast.py  material_mapping.py  precip.py  wind.py
src/esimulab/sim/: __init__.py  camera.py  dynamic_forcing.py  parallel.py  renderer.py  runner.py  scene.py  soil.py  wind_zones.py
src/esimulab/surrogate/: __init__.py  data_pipeline.py  fno.py  meshgraphnet.py  pino.py
src/esimulab/terrain/: __init__.py  convert.py  dem.py  landcover.py  mesh.py
src/esimulab/urban/: __init__.py  buildings.py  gaussian_city.py  surface.py  (+4 more)
tests/: conftest.py  test_cli.py  test_pipeline.py
tests/atmo/: test_downscale.py  test_fetch.py  test_forecast.py  test_material_mapping.py  test_precip.py  test_wind.py
tests/fixtures/: sample_atmo.json  sample_dem.npy
tests/integration/: test_pipeline.py  test_terrain_to_web.py
tests/sim/: test_camera.py  test_dynamic_forcing.py  test_parallel.py  test_renderer.py  test_scene.py  test_soil.py  test_wind_zones.py
tests/surrogate/: test_data_pipeline.py  test_fno.py  test_meshgraphnet.py  test_pino.py
tests/terrain/: test_convert.py  test_dem.py  test_landcover.py  test_mesh.py
tests/urban/: test_buildings.py  test_gaussian_city.py  test_overture.py  test_skyfall_gs.py  test_surface.py  test_tiles3d.py  test_wind_canyon.py
tests/web/: test_overlay.py  test_region.py  test_server.py  test_streaming.py
(+9 files in other folders)
