[project]
name = "esimulab"
version = "0.1.0"
description = "GPU-accelerated environmental simulation platform coupling Genesis physics with AI-downscaled atmospheric data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Ziming" },
]

dependencies = [
    "numpy>=1.24",
    "xarray>=2023.1",
    "rasterio>=1.3",
    "rioxarray>=0.14",
    "dem-stitcher>=2.5",
    "trimesh>=4.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "click>=8.1",
]

[project.optional-dependencies]
gpu = [
    "genesis-world>=0.4",
    "earth2studio>=0.13",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "pre-commit>=3.7",
]

[project.scripts]
esimulab = "esimulab.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/esimulab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "gpu: marks tests that require GPU hardware (deselect with '-m \"not gpu\"')",
    "integration: marks integration tests (deselect with '-m \"not integration\"')",
    "slow: marks slow-running tests",
]

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]

[tool.ruff.lint.isort]
known-first-party = ["esimulab"]
